--- a/bank-terminal/views/layout.jade
+++ b/bank-terminal/views/layout.jade
@@ -83,6 +83,7 @@ html(lang="en")
           greetings: 'The North Bank Terminal. Click to activate.\n' +
                      'jQuery terminal Copyright &copy; 2011-2013 Jakub Jankiewicz <http://jcubic.pl>\n' +
                      'Type HELP to begin.',
+          outputLimit: 20,
           completion: Object.keys(commandHandlers).concat(Object.keys(commandHandlers).map(function(e) { return e.toLowerCase(); }))
         });
       });
