Fix broken login

--- a/splash/views/ea-login.jade
+++ b/splash/views/ea-login.jade
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  form(action="bank.php", method="post")
+  form(action="/", method="post")
     p
       input(name="username", type="text")
     p
