Fix bank, splash

--- a/bank-terminal/views/layout.jade
+++ b/bank-terminal/views/layout.jade
@@ -80,10 +80,10 @@ html(lang="en")
             commandHandlers[head](terminal, tail);
           }
         }, {
-          greetings: 'The North Bank Terminal. Click to activate.\n' +
+          greetings: 'the North Bank Terminal. Click to activate.\n' +
                      'jQuery terminal Copyright &copy; 2011-2013 Jakub Jankiewicz <http://jcubic.pl>\n' +
                      'Type HELP to begin.',
-          outputLimit: 20,
+          height: '400px',
           completion: Object.keys(commandHandlers).concat(Object.keys(commandHandlers).map(function(e) { return e.toLowerCase(); }))
         });
       });
