--- a/splash/views/secret.jade
+++ b/splash/views/secret.jade
@@ -549,7 +549,8 @@ block content
 
   p.
     I, Bertrand Dupont, CEO of The North Bank, vest my trust in you to keep my
-    documents secret. However, I understand that there may be situations where
+    <a href="/logout">documents</a> (stored in the employee area, under my username
+    bdupont) secret. However, I understand that there may be situations where
     I am unavailable to act on a pressing matter for this company. After discussion
     with Wesley Scott, our CSO, I have decided to allow retrieval of my primary
     encryption key if at least five of my eight most loyal employees combine their
