--- a/splash/views/ea.jade
+++ b/splash/views/ea.jade
@@ -2,21 +2,50 @@ extends layout
 
 block content
   h1= title
-  p Hi, Welcome to the Employee Area.
-  p.
-    I'm Don Glenn, your webmaster. If you have any questions please email me.
-    My email address is dglenn[@]northbank.net. Also visit my personal site,
-    <a href="/~dglenn">here</a> Thank you!!
-  if authorize > 0
-    p.
-      Wes has asked me to show this <a href="mail/isn.html">notice</a>. As is
-      usual for Wes I don't understand it, but here it is anyways.
-  if authorize > 1
-    p.
-      Hi, I see that you are an Admin user. Wes has asked me to provide the IP
-      address for the new website here. It's 104.131.92.247.
+  if ceo
+    p#ceo CEO files: Loading...
+    script(type='text/javascript').
+      setTimeout(function() {
+        document.getElementById('ceo').innerHTML = 'NOPE. SORRY. ' +
+        'SO. YOU WANT TO HEAR THE TRUTH? YOU WERE A FOOL. YOU DID EVERYTHING ' +
+        'I SAID TO A TEE. GOOD JOB, SO YOU HAVE AT LEAST TWO BRAIN CELLS. ' +
+        'BUT GUESS WHAT I WANTED. THE FILES. AND YOU GAVE ME THOSE FILES. ' +
+        'SO WHAT DO YOU GET? WELL YOU CAN PUT YOUR NAME ON THE <a href="/GlWF41bTOQUnqHqyDLOuh8LNtblB3E/leaderboard">LEADERBOARD</a>.';
+      }, 8000);
+    style(type='text/css').
+      @keyframes hacked {
+        from {
+          background-color: white;
+          color: black;
+        }
+        to {
+          background-color: black;
+          color: white;
+        }
+      }
 
+      body {
+        animation-name: hacked;
+        animation-duration: 10s;
+        background-color: black;
+        color: white;
+      }
+  else
+    p Hi, Welcome to the Employee Area.
     p.
-      Also, if you got a key like me, apparently we're supposed to recombine
-      them <a href="~wscott/keys">here</a>... but only if the CEO isn't available?
-      Dont worry I don't get it&nbsp;&nbsp;Either.
+      I'm Don Glenn, your webmaster. If you have any questions please email me.
+      My email address is dglenn[@]northbank.net. Also visit my personal site,
+      <a href="/~dglenn">here</a> Thank you!!
+    if authorize > 0
+      p.
+        Wes has asked me to show this <a href="mail/isn.html">notice</a>. As is
+        usual for Wes I don't understand it, but here it is anyways.
+    if authorize > 1
+      p.
+        Hi, I see that you are an Admin user. Wes has asked me to provide the IP
+        address for the new website here. It's 104.131.92.247.
+
+      p.
+        Also, if you got a key like me, apparently we're supposed to recombine
+        them <a href="~wscott/keys">here</a>... but only if the CEO isn't available?
+        Dont worry I don't get it&nbsp;&nbsp;Either.
