--- a/splash/views/ea.jade
+++ b/splash/views/ea.jade
@@ -3,15 +3,69 @@ extends layout
 block content
   h1= title
   if ceo
-    p#ceo CEO files: Loading...
+    p#ceo CEO files: Decrypting...
+    canvas#canvas(class='off')
+
     script(type='text/javascript').
+      var ptext = 'NOPE. SORRY. ' +
+      'SO. YOU WANT TO HEAR THE TRUTH? YOU WERE A FOOL. YOU DID EVERYTHING ' +
+      'I SAID TO A TEE. GOOD JOB, SO YOU HAVE AT LEAST TWO BRAIN CELLS. ' +
+      'BUT GUESS WHAT I WANTED. THE FILES. AND YOU GAVE ME THOSE FILES. ' +
+      'SO WHAT DO YOU GET? WELL YOU CAN PUT YOUR NAME ON THE ';
+      var i = 0;
+      setInterval(function() {
+        i++;
+        if (canvas.className === 'on') {
+          canvas.className = 'off';
+        }
+        if (i < 200 && Math.random() * 100 < i) {
+          canvas.className = 'on';
+        }
+        if (i > 200) {
+          var px = ptext + 'LEADERBOARDS.';
+          var hx = 'GOTCHA';
+          var hlevel = Math.min(hx.length, Math.max(i - 200, 0));
+          var plevel = Math.min(px.length, Math.max(i - 220, 0));
+          document.querySelector('h1').textContent = hx.slice(0, hlevel);
+          document.querySelector('p').textContent = px.slice(0, plevel);
+        }
+      }, 50);
       setTimeout(function() {
-        document.getElementById('ceo').innerHTML = 'NOPE. SORRY. ' +
-        'SO. YOU WANT TO HEAR THE TRUTH? YOU WERE A FOOL. YOU DID EVERYTHING ' +
-        'I SAID TO A TEE. GOOD JOB, SO YOU HAVE AT LEAST TWO BRAIN CELLS. ' +
-        'BUT GUESS WHAT I WANTED. THE FILES. AND YOU GAVE ME THOSE FILES. ' +
-        'SO WHAT DO YOU GET? WELL YOU CAN PUT YOUR NAME ON THE <a href="/GlWF41bTOQUnqHqyDLOuh8LNtblB3E/leaderboard">LEADERBOARD</a>.';
-      }, 8000);
+        document.getElementById('ceo').innerHTML = ptext + '<a href="/GlWF41bTOQUnqHqyDLOuh8LNtblB3E/leaderboard">LEADERBOARD</a>.';
+      }, 20000);
+
+      var canvas = document.getElementById('canvas'),
+      ctx = canvas.getContext('2d');
+
+      function resize() {
+          canvas.width = window.innerWidth;
+          canvas.height = window.innerHeight;
+      }
+      resize();
+      window.onresize = resize;
+
+      function noise(ctx) {
+
+          var w = ctx.canvas.width,
+              h = ctx.canvas.height,
+              idata = ctx.createImageData(w, h),
+              buffer32 = new Uint32Array(idata.data.buffer),
+              len = buffer32.length,
+              i = 0;
+
+          for(; i < len;)
+              buffer32[i++] = ((255 * Math.random())|0) << 24;
+
+          ctx.putImageData(idata, 0, 0);
+      }
+
+      (function loop() {
+          noise(ctx);
+          setTimeout(function() {
+            requestAnimationFrame(loop);
+          }, 30);
+      })();
+
     style(type='text/css').
       @keyframes hacked {
         from {
@@ -19,16 +73,29 @@ block content
           color: black;
         }
         to {
-          background-color: black;
+          background-color: #7F7F7F;
           color: white;
         }
       }
 
       body {
-        animation-name: hacked;
-        animation-duration: 10s;
+        animation: hacked 10s, hacked 2s 5 alternate;
         background-color: black;
         color: white;
+      }
+
+      #canvas.off {
+        display: none;
+      }
+
+      #canvas.on {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 100;
       }
   else
     p Hi, Welcome to the Employee Area.
